Transfer java vm options from catalina.sh to startup.sh.